@@ -42,8 +42,8 @@ class IResearchRocksDBLink final : public arangodb::RocksDBIndex, public IResear
  public:
   IResearchRocksDBLink(IndexId iid, arangodb::LogicalCollection& collection);
 
-  void afterTruncate(TRI_voc_tick_t /*tick*/) override {
-    IResearchLink::afterTruncate();
+  void afterTruncate(TRI_voc_tick_t tick) override {
+    IResearchLink::afterTruncate(tick);
   }
 
   bool canBeDropped() const override {
