@@ -1,6 +1,9 @@
 v3.7.2 (XXXX-XX-XX)
 -------------------
 
+* Fixed internal issue #742: Add tick storage in index meta payload for
+  ArangoSearch view links after collection truncate operation.
+
 * Fixed issue #12304: insert in transaction causing
   com.arangodb.ArangoDBException: Response: 500, Error: 4 - Builder value not
   yet sealed.
